--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Mark/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Mark/Index.cshtml
@@ -6,8 +6,6 @@
     Layout = "/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-
-
 <div class="main-panel">
     <div class="content">
         <div class="container-fluid">
@@ -93,7 +91,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                @foreach (EditMarkTeacherViewModel mark in Model.EditMarkTeacherViewModels)
+                                               @foreach (EditMarkTeacherViewModel mark in Model.EditMarkTeacherViewModels)
                                                 {
                                                     <tr>
                                                         <th scope="row">@mark.Id</th>
@@ -124,7 +122,7 @@
                                             <div class="col-md-2">
                                                 <p>Chose University</p>
                                                 <select name="Universities" class="form-control" style="width: 150px" id="university2">
-                                                    @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                                   @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
                                                     {
                                                         <option title="@university.Description" value="@university.Id">@university.Name</option>
                                                     }
@@ -245,7 +243,41 @@
                                                 </button>
                                             </div>
                                         </form>
+                                    </div>
 
+                                    <div class="row max-w-full">
+                                        <p>View all my your Mark Teacher</p>
+                                        <table class="table table-hover table-responsive">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">#</th>
+                                                    <th scope="col">Type</th>
+                                                    <th scope="col">Mark</th>
+                                                    <th scope="col"></th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @foreach (EditMarkCourseTeacherViewModel mark in Model.EditMarkCourseTeacherViewModels)
+                                                {
+                                                    <tr>
+                                                        <th scope="row">@mark.Id</th>
+                                                        <td>@(mark.UniversityName + ", " + mark.CourseName + ", " + mark.CourseName)</td>
+                                                        <td>@mark.Mark</td>
+                                                        <td>
+                                                            <form asp-action="DeleteMark" asp-route-id="@mark.Id" data-ajax="true">
+                                                                <a class="btn btn-sm btn-primary d-none d-md-inline-block" onclick="PopupForm('@Url.Action("EditMark","Mark", new {id = mark.Id})')">
+                                                                    <span class="glyphicon glyphicon-pencil"></span>Modify
+                                                                </a>
+                                                                <button type="submit" class="btn btn-sm btn-danger d-none d-md-inline-block">
+                                                                    <span class="glyphicon glyphicon-erase"></span>Delete
+                                                                </button>
+
+                                                            </form>
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
 
