--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Teacher/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Teacher/Index.cshtml
@@ -8,6 +8,7 @@
 @{
     ViewData["Title"] = "Teachers";
     Layout = "/Views/Shared/_LayoutDashboard.cshtml";
+
 }
 
 <div class="main-panel">
@@ -21,14 +22,22 @@
                             <h4 class="title">List of Teachers</h4>
                             <p class="category">Teachers of university in Moldova</p>
 
-                            <select name="Universities" class="form-control" id="university" style="width: 240px">
-                                <option value="0">All Teacher</option>
-                               @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
-                                {
-                                    <option title="@university.Description" value="@university.Id">@university.Name</option>
-                                }
-                            </select>
-
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <select name="Universities" class="form-control" id="university" style="width: 240px">
+                                        <option value="0">All Teacher</option>
+                                        @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                        {
+                                            <option title="@university.Description" value="@university.Id">@university.Name</option>
+                                        }
+                                    </select>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="col-md-2 ">
+                                        <input class="form-control" style="width: 150px" type="text" placeholder="search" id="search" />
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="content table-responsive table-full-width" id="teachers">
@@ -45,33 +54,26 @@
                                     </tr>
                                 </thead>
                                 <tbody id="resultsTable">
-                                    @foreach (TeacherShowViewModel teacher in Model.TeacherShows)
-                                    {
-                                        <tr>
-                                            <td>@($"{teacher.Id}")</td>
-                                            <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
-                                            <td>@($"{teacher.AverageMarks}")</td>
-                                            <td>@($"{teacher.Email}")</td>
-                                            <td>@($"{teacher.TypeTeacher}")</td>
-                                            <td>
-                                                @foreach (string university in teacher.Universities)
-                                                {
-                                                    @($"{university} ")
-                                                }
-                                            </td>
-                                        </tr>
-                                    }
-
+                                    @await Html.PartialAsync("_TeacherTableRecords", Model.TeacherShowViewModels)
                                 </tbody>
                             </table>
                         </div>
 
-                        <div>
-                            <a class="btn btn-success" id="moreTeachers" style="margin-bottom: 10px">
-                                <i class="fa fa-plus"></i> Show More Teachers
-                            </a>
+                        <div class="row">
+                            <div class="col-md-10">
+                                <a class="btn btn-success" id="moreTeachers" style="margin-bottom: 10px" data-page-number="1">
+                                    <i class="fa fa-plus"></i> Show More Teachers
+                                </a>
+                            </div>
+                            <div class="col-md-2">
+                                <select class="form-control" style="width: 100px" id="numberOfRecordsPerPage">
+                                    <option value="5"> 5 </option>
+                                    <option value="10"> 10 </option>
+                                    <option value="20"> 20 </option>
+                                    <option value="30"> 50 </option>
+                                </select>
+                            </div>
                         </div>
-
                     </div>
                 </div>
 
@@ -80,77 +82,80 @@
     </div>
 </div>
 
+
 @section Scripts{
 
     <script>
-        $(document).ready(function() {
-            var pageNumber = 1;
-
-            $("#moreTeachers").click(function() {
-
-                pageNumber++;
-
-                $.ajax({
-                    url: "/Teacher/TeachersByUniversityId",
-                    type: "GET",
-                    data: ({ universityId: $('#university').val(), page: pageNumber }),
-                    success: function(data) {
-
-                        if (data.length < 4) {
-                            $("#moreTeachers").hide();
-                        }
-
-                        $.each(data,
-                            function(i, item) {
-                                $('#resultsTable').append
-                                (
-                                    "<tr>" +
-                                    "<td>" +
-                                    item.Id +
-                                    "</td>" +
-                                    "<td>" +
-                                    item.FirstName +
-                                    item.LastName +
-                                    "</td>" +
-                                    "<td>" +
-                                    item.AverageMarks +
-                                    "</td>" +
-                                    "<td>" +
-                                    item.Email +
-                                    "</td>" +
-                                    "<td>" +
-                                    item.TypeTeacher +
-                                    "</td>" +
-                                    "<td>" +
-                                    $.each(item.Universities, function(index, value) { value }) +
-                                    "</td>" +
-                                    "</tr>"
-                                );
-                            });
-                    }
-                });
+        var pageNumber = 1;
+        $(function () {
+            $("#search").bind("change", function () {
+                pageNumber = 1;
+                var url = '@Url.Action("TeachersByUniversityId")' +
+                    '?universityId=' + $('#university').val() +
+                    '&pageNumber=' + pageNumber +
+                    '&search=' + $('#search').val() +
+                    '&numberOfRecordsPerPage=' + $('#numberOfRecordsPerPage').val();
+                $("#resultsTable").empty();
+                $.get(url,
+                    function(response) {
+                        $("#resultsTable").append($(response));
+                    });
             });
 
-            $("#university").bind("change",
-                function() {
+            $("#university").bind("change", function () {
+                pageNumber = 1;
 
-                    pageNumber = 1;
+                var url = '@Url.Action("TeachersByUniversityId")' +
+                    '?universityId=' + $('#university').val() +
+                    '&pageNumber=' + pageNumber +
+                    '&search=' + $('#search').val() +
+                    '&numberOfRecordsPerPage=' + $('#numberOfRecordsPerPage').val();
+                $("#resultsTable").empty();
+                $.get(url,
+                    function(response) {
+                        $("#resultsTable").append($(response));
+                    });
+            });
 
+            $("#moreTeachers").click(function () {
+                var pageNumber = parseInt($(this).attr('data-page-number')) + 1;
+
+                $(this).attr('data-page-number', pageNumber);
+
+                var url = '@Url.Action("TeachersByUniversityId")' +
+                    '?universityId=' + $('#university').val() +
+                    '&pageNumber=' + $("#moreTeachers").attr('data-page-number') +
+                    '&search=' + $('#search').val() +
+                    '&numberOfRecordsPerPage=' + $('#numberOfRecordsPerPage').val();
+
+                $.get(url,
+                    function(response) {
+                        $("#resultsTable").append($(response));
+                    });
+            });
+
+
+        });
+    </script>
+
+
+    @*<script>
+            $(document).ready(function () {
+                var pageNumber = 1;
+
+                $("#moreTeachers").click(function () {
+
+                    pageNumber++;
 
                     $.ajax({
                         url: "/Teacher/TeachersByUniversityId",
                         type: "GET",
                         data: ({ universityId: $('#university').val(), page: pageNumber }),
-                        success: function(data) {
+                        success: function (data) {
 
-                            if (data.length < 4) {
-                                $("#moreTeachers").hide();
-                            }
-
-                            $('#resultsTable').empty(),
-                                $.each(data,
-                                    function(i, item) {
-                                        $('#resultsTable').append
+                            $.each(data,
+                                function (i, item) {
+                                    $('#resultsTable').append
                                         (
                                             "<tr>" +
                                             "<td>" +
@@ -170,15 +175,56 @@
                                             item.TypeTeacher +
                                             "</td>" +
                                             "<td>" +
-                                            $.each(item.Universities, function(index, value) { value }) +
+                                            $.each(item.Universities, function (index, value) { value }) +
                                             "</td>" +
                                             "</tr>"
                                         );
-                                    });
+                                });
                         }
                     });
                 });
-        });
-    </script>
 
+                $("#university").bind("change",
+                    function () {
+                        pageNumber = 1;
+
+                        $.ajax({
+                            url: "/Teacher/TeachersByUniversityId",
+                            type: "GET",
+                            data: ({ universityId: $('#university').val(), page: pageNumber }),
+                            success: function (data) {
+
+                                $('#resultsTable').empty(),
+                                    $.each(data,
+                                        function (i, item) {
+                                            $('#resultsTable').append
+                                                (
+                                                    "<tr>" +
+                                                    "<td>" +
+                                                    item.Id +
+                                                    "</td>" +
+                                                    "<td>" +
+                                                    item.FirstName +
+                                                    item.LastName +
+                                                    "</td>" +
+                                                    "<td>" +
+                                                    item.AverageMarks +
+                                                    "</td>" +
+                                                    "<td>" +
+                                                    item.Email +
+                                                    "</td>" +
+                                                    "<td>" +
+                                                    item.TypeTeacher +
+                                                    "</td>" +
+                                                    "<td>" +
+                                                    $.each(item.Universities, function (index, value) { value }) +
+                                                    "</td>" +
+                                                    "</tr>"
+                                                );
+                                        });
+                            }
+                        });
+                    });
+            });
+        </script>*@
 }
