--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Teacher/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Teacher/Index.cshtml
@@ -26,7 +26,7 @@
                                 <div class="col-md-10">
                                     <select name="Universities" class="form-control" id="university" style="width: 240px">
                                         <option value="0">All Teacher</option>
-                                        @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                       @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
                                         {
                                             <option title="@university.Description" value="@university.Id">@university.Name</option>
                                         }
@@ -118,13 +118,11 @@
             });
 
             $("#moreTeachers").click(function () {
-                var pageNumber = parseInt($(this).attr('data-page-number')) + 1;
-
-                $(this).attr('data-page-number', pageNumber);
+                pageNumber ++;
 
                 var url = '@Url.Action("TeachersByUniversityId")' +
                     '?universityId=' + $('#university').val() +
-                    '&pageNumber=' + $("#moreTeachers").attr('data-page-number') +
+                    '&pageNumber=' + pageNumber +
                     '&search=' + $('#search').val() +
                     '&numberOfRecordsPerPage=' + $('#numberOfRecordsPerPage').val();
 
