--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Login.cshtml
@@ -159,8 +159,7 @@
                             or sign up using
                         </span>
                     </div>
-
-                    <div class="login100-form-social flex-c-m">
+                    <div class="login100-form-social flex-c-m ">
                         <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
                             <i class="fa fa-facebook-f" aria-hidden="true"></i>
                         </a>
@@ -171,8 +170,40 @@
                     </div>
                 </form>
 
+                
+
                 <div class="login100-more" style="background-image: url('/img/bg-01.jpg');">
                 </div>
+            </div>
+            <div class="col-md-6 col-md-offset-2">
+                <section>
+                    <h4>Use another service to log in.</h4>
+                    <hr />
+                    @{
+                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                        {
+                            <div>
+                                <p>
+                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                    for details on setting up this ASP.NET application to support logging in via external services.
+                                </p>
+                            </div>
+                        }
+                        else
+                        {
+                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                <div>
+                                    <p>
+                                        @foreach (var provider in Model.ExternalLogins)
+                                        {
+                                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                        }
+                                    </p>
+                                </div>
+                            </form>
+                        }
+                    }
+                </section>
             </div>
         </div>
     </div>
