--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/_ViewListComment.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/_ViewListComment.cshtml
@@ -13,7 +13,7 @@
                     <h4 class="media-heading">
                        User: @comment.UserName
                     </h4>
-                    <p> Type: @comment.Subject</p>
+                    <p> Type: @comment.Type</p>
                     <p> Subject: @comment.Subject</p>
                     <p> Message: @comment.Message</p>
                 </div>
