crud univer , crud teacher

--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -151,9 +151,9 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-controller="Home" asp-action="Maps">
-                            <i class="pe-7s-map-marker"></i>
-                            <p>Maps</p>
+                        <a asp-controller="AdminSetting" asp-action="Index">
+                            <i class="pe-7s-pendrive"></i>
+                            <p>Admin Settings</p>
                         </a>
                     </li>
                 </ul>
