--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
@@ -139,15 +139,9 @@
         </div>
     </div>
 
-    @*<div class="col-12 narrow text-center">
-            <p class="lead">Learn more about university</p>
-            <a class="btn btn-secondary btn-md" asp-controller="Home" asp-action="About"
-               target="_blank">University Rating</a>
-        </div>*@
-
     <div class="col-12 narrow text-center">
         <p class="lead">Learn more about university</p>
-        <a class="btn btn-secondary btn-md" asp-area="Identity" asp-page="/Account/ExternalLogin"
-           target="_blank">University Rating</a>
+        <a class="btn btn-secondary btn-md" asp-controller="Home" asp-action="About">University Rating</a>
     </div>
+
 </div>
