--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/_ViewListComment.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/_ViewListComment.cshtml
@@ -2,21 +2,36 @@
 
 @model List<UniversityRating.Presentation.Models.Comment.CommentViewModel>
 
-    @foreach (CommentViewModel comment in Model)
-    {
-        <li class="media">
-            <a class="pull-left" style="padding-top: 25px">
-                <i class="fas fa-user" style="zoom: 800%"></i>
-            </a>
-            <div class="media-body">
-                <div class="well well-lg">
-                    <h4 class="media-heading">
-                       User: @comment.UserName
-                    </h4>
-                    <p> Type: @comment.Type</p>
-                    <p> Subject: @comment.Subject</p>
-                    <p> Message: @comment.Message</p>
+@foreach (CommentViewModel comment in Model)
+{
+    <li class="media">
+        <a class="pull-left" style="padding-top: 25px">
+            <i class="fas fa-user" style="zoom: 800%"></i>
+        </a>
+        <div class="media-body">
+            <div class="well well-lg">
+                <div class="row">
+                    <div class="col-md-10">
+                        <h4 class="media-heading">
+                            User: @comment.UserName
+                        </h4>
+                        <p> Type: @comment.Type</p>
+                        <p> Subject: @comment.Subject</p>
+                        <p> Message: @comment.Message</p>
+                    </div>
+                    @if (User.IsInRole("moderator"))
+                    {
+                        <form asp-action="DeleteViewComment" asp-route-id="@comment.Id" data-ajax="true" data-ajax-success="deleteItem(this)">
+
+                            <div class="col-md-1">
+                                <button type="submit" class="btn btn-sm btn-danger d-none d-md-inline-block">
+                                    <span class="glyphicon glyphicon-erase"></span>Delete
+                                </button>
+                            </div>
+                        </form>
+                    }
                 </div>
             </div>
-        </li>
-    }
+        </div>
+    </li>
+}
